--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.header-list {
+    list-style: none;
+    display: flex;
+}
+  
+.header-list li {
+    margin: 0 10px;
+}
+
+
 nav ul {
     list-style: none;
     margin: 0;
