--- a/style.css
+++ b/style.css
@@ -2,31 +2,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-  
-.header-list {
-    list-style: none;
-    display: flex;
-}
-  
-.header-list li {
-    margin: 0 10px;
-}
-
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
+    margin-bottom: 20px; 
   }
   
-  nav li {
-    margin: 0 10px;
+  .header-list {
+    list-style: none;
+    display: flex;
   }
   
-  nav a {
+  .header-list li {
+    margin: 0 15px;
+  }
+  
+  .header-list a {
     text-decoration: none;
     color: #333;
   }
